cabal-version: 2.4
name: MyLib
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: MyLib
  build-depends: base >=4.7 && <5
  default-language: Haskell2010

foreign-library MyLib
  type: native-shared
  hs-source-dirs: src
  other-modules: MyLib
  build-depends: base >=4.7 && <5
  default-language: Haskell2010
  if os(Windows)
    options: standalone
